# BSDE-tensor-networks

./: .gitignore  README.md  als.ipynb  batch.ipynb  pyproject.toml  run.py  simulation.ipynb  tensor_train.ipynb
notebooks/: diagram.ipynb  pipeline.ipynb  pricing.ipynb  simulation.ipynb  tensor_train.ipynb
src/bsde-tt/: bsde.py
src/bsde_solver/: __init__.py  bsde.py  explicit.py  loss.py  nn_solver.py  pipeline.py  pipeline_explicit.py  tensor_train.py  utils.py
src/bsde_solver/calculus/: derivative.py
src/bsde_solver/core/calculus/: basis.py  derivative.py  hessian.py
src/bsde_solver/core/optimisation/: als.py  mals.py  scalar_als.py  solve.py
src/bsde_solver/core/tensor/: tensor_core.py  tensor_network.py  tensor_train.py
src/bsde_solver/optimisation/: als.py  mals.py  scalar_als.py
src/bsde_solver/stochastic/: path.py
src/bsde_solver/tensor/: tensor_core.py  tensor_network.py  tensor_train.py
src/bsde_solver/tests/: test_contraction.py  test_tensor_network.py  test_tensor_train.py
src/bsde_solver/tests/calculus/: test_derivative.py
src/bsde_solver/tests/core/: test_contraction.py  test_tensor_network.py  test_tensor_train.py
src/bsde_solver/tests/optimisation/: als.py  test.py  test_als.py  test_mals.py  test_real_data.py
src/bsde_solver/tests/stochastic/: test_path.py
src/scripts/: pipeline.py  pipeline_cupy.py  pipeline_explicit.py  stress.py
src/scripts/experiments/: algo_comparison.py  batch_size.py  benchmark_cupy.py  degree.py  degree_influence.py  implicit_explicit.py  n_assets.py  n_iter.py  pipeline_comparison.py
